2004-05-01  Mark Kettenis  <kettenis@gnu.org>

	Add OpenBSD/m68k support.
	* NEWS (New native configurations): Mention OpenBSD/m68k.
	* m68kbsd-tdep.c: New file.
	* m68kbsd-nat.c: New file.
	* Makefile.in (ALLDEPFILES): Add m68kbsd-nat.c and m68kbsd-tdep.c.
	(m68kbsd-nat.o, m68kbsd-tdep.o): New dependencies.
	* configure.host: Add m68k-*-openbsd.
	* configure.tgt: Add m68k-*-openbsd.
	* config/m68k/tm-obsd.h: New file.
	* config/m68k/obsd.mt: New file.
	* config/m68k/obsd.mh: New file.
	* config/djgpp/fnchange.lst: Add entries for m68kbsd-nat.c and
	m68kbsd-tdep.c.

2004-04-30  Andrew Cagney  <cagney@redhat.com>

	* mipsnbsd-tdep.c (mipsnbsd_pc_in_sigtramp): Delete function.
	(mipsnbsd_init_abi): Do not set pc_in_sigtramp.

2004-04-30  Mark Kettenis  <kettenis@gnu.org>

	* m68k-tdep.c (REMOTE_BPT_VECTOR): Remove define.
	* config/m68k/tm-nbsd.h (REMOTE_BPT_VECTOR): Remove define.

2004-04-30  Brian Ford  <ford@vss.fsi.com>

	Revert 2004-04-16 change.
	* i386-tdep.c (i386_gdbarch_init): Fix comment typos.
	(i386_coff_init_abi): Remove.
	* i386-tdep.h (i386_coff_init_abi): Remove.
	* i386-cygwin-tdep.c (i386_cygwin_init_abi): Remove call to above.

2004-04-30  Andrew Cagney  <cagney@redhat.com>

	* blockframe.c (find_pc_partial_function): Delete use of
	DEPRECATED_PC_IN_SIGTRAMP, DEPRECATED_SIGTRAMP_START and
	DEPRECATED_SIGTRAMP_END.

	* config/mips/tm-linux.h (DEPRECATED_IN_SIGTRAMP): Delete.
	* config/mips/tm-irix6.h (DEPRECATED_IN_SIGTRAMP): Delete.
	* config/mips/tm-nbsd.h: Delete undef DEPRECATED_IN_SIGTRAMP.
	* config/mips/tm-irix5.h (DEPRECATED_IN_SIGTRAMP): Delete.
	* config/arm/tm-embed.h (DEPRECATED_IN_SIGTRAMP): Delete.

	* defs.h (deprecated_inside_entry_file): Delete declaration.
	* blockframe.c (deprecated_inside_entry_file): Delete function.
	(legacy_frame_chain_valid): Delete call.
	* sh64-tdep.c (sh64_frame_chain): Delete call.
	* objfiles.h: Update comments.
	* i386-interix-tdep.c (i386_interix_frame_chain_valid): Delete
	call.